--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "frontend": "file:",
+    "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
@@ -21,7 +22,10 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.1"
+    "react-router-dom": "^7.5.1",
+    "react-select": "^5.10.1",
+    "react-select2": "^4.0.3",
+    "select2": "^4.1.0-rc.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
