--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,6 +3,11 @@ node_modules
 package-lock.json
 
 
+backend/backup26june/
+
+
+
+
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
